--- a/pom.xml
+++ b/pom.xml
@@ -37,16 +37,10 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <configuration>
-                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
             <plugin>
@@ -74,7 +68,9 @@
             <build>
                 <plugins>
                     <plugin>
+                        <!-- Eclipse compiler is capable of producing 1.7 binaries from 1.8 source -->
                         <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.6.1</version>
                         <configuration>
                             <source>1.8</source>
                             <target>1.7</target>
@@ -84,7 +80,7 @@
                             <dependency>
                                 <groupId>org.codehaus.plexus</groupId>
                                 <artifactId>plexus-compiler-eclipse</artifactId>
-                                <version>LATEST</version>
+                                <version>2.8.1</version>
                             </dependency>
                         </dependencies>
                     </plugin>
