--- a/pom.xml
+++ b/pom.xml
@@ -7,21 +7,13 @@
     <groupId>com.puppet</groupId>
     <artifactId>pcore</artifactId>
     <version>0.1.0-SNAPSHOT</version>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <junit.platform.version>1.0.0-M3</junit.platform.version>
-        <junit.jupiter.version>5.0.0-M3</junit.jupiter.version>
+        <jackson.version>2.8.4</jackson.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.jupiter.version}</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.msgpack</groupId>
             <artifactId>msgpack-core</artifactId>
@@ -30,59 +22,264 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.8.5</version>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.clojure</groupId>
+            <artifactId>clojure</artifactId>
+            <version>1.8.0</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit.platform.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>${junit.jupiter.version}</version>
-                    </dependency>
-                </dependencies>
+                <!-- Removes all build specific information from the installed pom file -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>1.0.0</version>
+                <configuration>
+                    <pomElements>
+                        <profiles>remove</profiles>
+                    </pomElements>
+                    <outputDirectory>target</outputDirectory>
+                    <flattenedPomFilename>flattened-pom.xml</flattenedPomFilename>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
 
     <profiles>
         <profile>
-            <id>target-1.7</id>
+            <id>jdk8</id>
+
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+
+            <properties>
+                <junit.platform.version>1.0.0-M3</junit.platform.version>
+                <junit.jupiter.version>5.0.0-M3</junit.jupiter.version>
+            </properties>
+
+            <dependencies>
+                <dependency>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-api</artifactId>
+                    <version>${junit.jupiter.version}</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+
             <build>
                 <plugins>
                     <plugin>
-                        <!-- Eclipse compiler is capable of producing 1.7 binaries from 1.8 source -->
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.6.1</version>
-                        <configuration>
-                            <source>1.8</source>
-                            <target>1.7</target>
-                            <compilerId>eclipse</compilerId>
-                        </configuration>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.19.1</version>
                         <dependencies>
                             <dependency>
-                                <groupId>org.codehaus.plexus</groupId>
-                                <artifactId>plexus-compiler-eclipse</artifactId>
-                                <version>2.8.1</version>
+                                <groupId>org.junit.platform</groupId>
+                                <artifactId>junit-platform-surefire-provider</artifactId>
+                                <version>${junit.platform.version}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.junit.jupiter</groupId>
+                                <artifactId>junit-jupiter-engine</artifactId>
+                                <version>${junit.jupiter.version}</version>
                             </dependency>
                         </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>jdk7</id>
+
+            <dependencies>
+                <dependency>
+                    <groupId>org.threeten</groupId>
+                    <artifactId>threetenbp</artifactId>
+                    <version>1.3.3</version>
+                </dependency>
+                <dependency>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                    <version>4.12</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>com.nitorcreations</groupId>
+                    <artifactId>junit-runners</artifactId>
+                    <version>1.3</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.8</version>
+                        <executions>
+                            <execution>
+                                <phase>generate-sources</phase>
+                                <configuration>
+                                    <target>
+                                        <!-- Mangle source to fit backported packages -->
+                                        <property name="build.compiler" value="extJavac"/>
+                                        <copy todir="target/filtered-sources/main/java">
+                                            <fileset dir="${project.build.sourceDirectory}"/>
+                                        </copy>
+                                        <copy todir="target/filtered-sources/main/java">
+                                            <fileset dir="src/main/java7"/>
+                                        </copy>
+                                        <replace token= "java.time." value="org.threeten.bp." dir="target/filtered-sources/main/java" includes="**/*.java"/>
+                                        <replace token= "java.util.Base64" value="com.puppet.pcore.java7.util.Base64" dir="target/filtered-sources/main/java" includes="**/*.java"/>
+                                        <replace token= "java.util.function." value="com.puppet.pcore.java7.util.function." dir="target/filtered-sources/main/java" includes="**/*.java"/>
+                                        <mkdir dir="${project.build.outputDirectory}"/>
+
+                                        <!-- compile using normal java 8 compiler so that it can be processed by the retrolamda plugin -->
+                                        <javac includeantruntime="false" srcdir="target/filtered-sources/main/java" destdir="${project.build.outputDirectory}" classpathref="maven.compile.classpath" source="1.8" target="1.8">
+                                            <compilerarg value="-Xlint"/>
+                                        </javac>
+
+                                        <!-- Mangle test source to fit backported packages -->
+                                        <copy todir="target/filtered-sources/test/java">
+                                            <fileset dir="${project.build.testSourceDirectory}"/>
+                                        </copy>
+                                        <copy todir="target/filtered-sources/test/java">
+                                            <fileset dir="src/test/java7"/>
+                                        </copy>
+                                        <replace token= "java.time." value="org.threeten.bp." dir="target/filtered-sources/test/java" includes="**/*.java"/>
+                                        <replace token= "java.util.function." value="com.puppet.pcore.java7.util.function." dir="target/filtered-sources/test/java" includes="**/*.java"/>
+
+                                        <!-- Mangle test source using org.junit.jupiter style nested classes to compile properly using com.nitorcreations.junit.runners.NestedRunner -->
+                                        <replace token= "import static org.junit.jupiter.api.Assertions.*;" value="import static com.puppet.pcore.Assert.*;&#10;import static org.junit.Assert.*;" dir="target/filtered-sources/test/java" includes="**/*.java"/>
+                                        <replace token= "import static org.junit.jupiter.api.Assertions.assertThrows;" value="import static com.puppet.pcore.Assert.assertThrows;" dir="target/filtered-sources/test/java" includes="**/*.java"/>
+                                        <replace token= "org.junit.jupiter.api." value="org.junit." dir="target/filtered-sources/test/java" includes="**/*.java"/>
+                                        <replace token= "Assertions" value="Assert" dir="target/filtered-sources/test/java" includes="**/*.java"/>
+
+                                        <replaceregexp match='(?sm)^(import [^\n]*$)(.*)^(.DisplayName[^\n]*)$(.*Nested.*^\})' replace="\1&#10;import org.junit.runner.RunWith;&#10;import com.nitorcreations.junit.runners.NestedRunner;&#10;\2@RunWith(NestedRunner.class)\4">
+                                            <fileset dir="target/filtered-sources/test/java" includes="**/*.java"/>
+                                        </replaceregexp>
+                                        <replaceregexp match='(?sm)^(\s*@Test\n(?:\s*@DisplayName[^\n]*\n)?\s*)void' replace="\1public void" flags="g">
+                                            <fileset dir="target/filtered-sources/test/java" includes="**/*.java"/>
+                                        </replaceregexp>
+                                        <replaceregexp match='^(\s*)class(\s+)' replace="\1public class\2" byline="true">
+                                            <fileset dir="target/filtered-sources/test/java" includes="**/*.java"/>
+                                        </replaceregexp>
+                                        <replaceregexp match='^(\s*)(.*[@\.]DisplayName.*)$' replace="\1// \2" byline="true">
+                                            <fileset dir="target/filtered-sources/test/java" includes="**/*.java"/>
+                                        </replaceregexp>
+                                        <replaceregexp match='^(\s*)(.*[@\.]Nested;?)$' replace="\1// \2" byline="true">
+                                            <fileset dir="target/filtered-sources/test/java" includes="**/*.java"/>
+                                        </replaceregexp>
+                                        <replaceregexp match='BeforeAll' replace="BeforeClass" byline="true">
+                                            <fileset dir="target/filtered-sources/test/java" includes="**/*.java"/>
+                                        </replaceregexp>
+                                        <replaceregexp match='BeforeEach' replace="Before" byline="true">
+                                            <fileset dir="target/filtered-sources/test/java" includes="**/*.java"/>
+                                        </replaceregexp>
+                                        <mkdir dir="${project.build.testOutputDirectory}"/>
+
+                                        <!-- compile using normal java 8 compiler so that it can be processed by the retrolamda plugin -->
+                                        <javac includeantruntime="false" srcdir="target/filtered-sources/test/java" destdir="${project.build.testOutputDirectory}" classpathref="maven.test.classpath" source="1.8" target="1.8"/>
+                                    </target>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <!-- Disable maven compiler plugin -->
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.6.1</version>
+                        <executions>
+                            <execution>
+                                <id>default-compile</id>
+                                <goals>
+                                    <goal>compile</goal>
+                                </goals>
+                                <configuration>
+                                    <skipMain>true</skipMain>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>default-testCompile</id>
+                                <goals>
+                                    <goal>testCompile</goal>
+                                </goals>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>net.orfjackal.retrolambda</groupId>
+                        <artifactId>retrolambda-maven-plugin</artifactId>
+                        <version>2.5.0</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>process-main</goal>
+                                    <goal>process-test</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.19.1</version>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <skip>false</skip>
+                                    <jvm>${user.home}/tools/jdk1.7.0_45/bin/java</jvm>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.maven.surefire</groupId>
+                                <artifactId>surefire-junit47</artifactId>
+                                <version>2.19.1</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <version>3.0.2</version>
+                        <configuration>
+                            <classifier>jdk7</classifier>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
