--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <jackson.version>2.9.0</jackson.version>
-        <slf4j.version>1.8.0-alpha2</slf4j.version>
-        <junit.platform.version>1.0.0-RC2</junit.platform.version>
-        <junit.jupiter.version>5.0.0-RC2</junit.jupiter.version>
+        <jackson.version>2.9.2</jackson.version>
+        <slf4j.version>1.8.0-beta0</slf4j.version>
+        <junit.platform.version>1.0.1</junit.platform.version>
+        <junit.jupiter.version>5.0.1</junit.jupiter.version>
     </properties>
 
     <distributionManagement>
@@ -55,6 +55,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>${slf4j.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
